fix: correct processflow steps spacing

--- a/src/angular-business/processflow/processflow/processflow.component.scss
+++ b/src/angular-business/processflow/processflow/processflow.component.scss
@@ -51,7 +51,7 @@ $processflowStepButtonPaddingBottom5K: 42;
   }
   .sbb-processflow-step {
     display: flex;
-    flex: 1 0 auto;
+    flex: 0 0 auto;
     &::before {
       content: '';
     }
