--- a/src/angular-public/processflow/processflow/processflow.component.scss
+++ b/src/angular-public/processflow/processflow/processflow.component.scss
@@ -50,7 +50,7 @@ $processflowStepButtonPaddingBottom5K: 42;
   }
   .sbb-processflow-step {
     display: flex;
-    flex: 1 0 auto;
+    flex: 0 0 auto;
     &::before {
       content: '';
     }
